patches-dsl/tests/fixtures/errors/empty_template_wired.patches
template Empty {
    in:  x
    out: y
}
patch {
    module e   : Empty
    module out : AudioOut
    out.in_left <- e.y
}
